Configuring CI.