@@ -2,7 +2,11 @@ plugins {
     id 'java'
 }
 
+apply plugin: 'maven'
+apply plugin: 'signing'
+
 group 'org.twinstone'
+archivesBaseName = 'open-anonymizer'
 version '1.0.0'
 
 sourceCompatibility = 1.8
@@ -33,4 +37,51 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     // https://mvnrepository.com/artifact/org.powermock/powermock-api-mockito2
     testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.0'
+}
+
+task javadocJar(type: Jar) {
+    classifier = 'javadoc'
+    from javadoc
+}
+
+task sourcesJar(type: Jar) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+test {
+    jvmArgs "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap"
+}
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+
+            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+                authentication(userName: ossrhUsername, password: ossrhPassword)
+            }
+
+            snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots/") {
+                authentication(userName: ossrhUsername, password: ossrhPassword)
+            }
+
+            pom.project {
+                name 'Open Anonymizer'
+                packaging 'jar'
+
+                licenses {
+                    license {
+                        name 'MIT License'
+                    }
+                }
+
+                developers {
+                    developer {
+                        id 'ochmel'
+                        name 'Oleksandr Chmel'
+                    }
+                }
+            }
+        }
+    }
 }
